5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1577_2897.log
== TEST (2019-04-02 11:29:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(int(input))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(num=int(input))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num=int(input))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:30:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(num=int(input))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(num=int(input))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:52:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(num=int(input))
-- EXECUTION TIME:
0.131867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 7, in <module>
    print(num=int(input))
TypeError: int() argument must be a string or a number, not 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:53:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11
				 ))

# Impressao do dobro do numero
print(num=int(input))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num=int(input))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:53:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11
					))

# Impressao do dobro do numero
print(num=int(input))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num=int(input))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:54:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11
					))

# Impressao do dobro do numero
print(num=int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num=int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:55:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:56:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:57:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input(dobro)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input(dobro)))
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:57:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input(dobro)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input(dobro)))
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 12:00:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int)
TypeError: 'num' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:27:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int)
TypeError: 'num' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:27:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int)
-- EXECUTION TIME:
0.121753
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 8, in <module>
    print(num = int)
TypeError: 'num' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:27:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int)
-- EXECUTION TIME:
0.135964
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 8, in <module>
    print(num = int)
TypeError: 'num' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:27:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int)
TypeError: 'num' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:28:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int 11)
-- ERROR:
File "XXXX", line 8
    print(num = int 11)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:28:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int (11))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int (11))
TypeError: 'num' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:29:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input(11))
-- ERROR:
File "XXXX", line 9
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:29:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input(11))
-- ERROR:
File "XXXX", line 9
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:29:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input(11)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input(11)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:30:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input(22)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input(22)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:30:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input(22)))
-- EXECUTION TIME:
0.134544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 8, in <module>
    print(num = int(input(22)))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:30:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:30:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input())
-- ERROR:
File "XXXX", line 9
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:30:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:48:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:48:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:49:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10
					))
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:49:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(20)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(20)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:49:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(20)))
-- EXECUTION TIME:
0.164286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input(20)))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:50:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:51:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
print(num())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:53:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- EXECUTION TIME:
0.201496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:56:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:56:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 23:56:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- EXECUTION TIME:
0.221501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:57:05) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(5)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:57:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(5)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(5)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:57:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:57:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
print(int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:57:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
print(int(2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:58:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
print(int(10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:59:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10*2))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
print(int
-- ERROR:
File "XXXX", line 11
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 23:59:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10*2))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:00:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10*2))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(2)))
-- EXECUTION TIME:
0.240839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input(2)))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:00:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(*2)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(*2)))
TypeError: input() argument after * must be an iterable, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:04:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(22)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(22)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:04:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:04:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10*2 ))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:04:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(10*2 ))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- EXECUTION TIME:
0.165488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:05:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11*2 ))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:05:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11*2 ))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- EXECUTION TIME:
0.199098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:05:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11*2 ))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:05:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11*2 ))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- EXECUTION TIME:
0.126016
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:05:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11*2))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:05:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11*2))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input()))
-- EXECUTION TIME:
0.130867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 00:05:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(dobro)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(num = int(input(dobro)))
NameError: name 'dobro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 00:05:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))
				 
				
					 
# Impressao do dobro do numero
print(num = int(input(dobro)))
-- EXECUTION TIME:
0.143734
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/2897/main.py", line 9, in <module>
    print(num = int(input(dobro)))
NameError: name 'dobro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
